--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<div id="footerInner">
 			<ul>
 				<li><a href="contact.html">contact</a></li>
-				<li><a href="about.html">about</a></li>
+				<li><a href="about2.html">about</a></li>
 			</ul>
 		</div>
 	</div>
