--- a/about2.html
+++ b/about2.html
@@ -28,12 +28,7 @@
 	<div id="pageWrap">
 
 		<div id="aboutWrap">
-			<div id="aboutInner">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+			<div id="aboutInner">7 is a multidisciplinary agency working on both external and internal projects. 7 is a group made up of very different individuals. Our aim is to nurture the groups uniqenuess and approach every problem with an open mind, aware of that no question has an abvious answer, and in the end make something we love and think is remarkable.</div>
 		</div>
 
 	</div>
