--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 
 <div id="pageWrap">
 
+	<div id="header">
+		<div id="logoBox">
+			<div id="logo"></div>
+		</div>	
+	</div>
+
 	<div id="sevenWrap">
 		<div id="sevenInner">
 			<div id="sevenBox">
