--- a/index.html
+++ b/index.html
@@ -1,61 +1,82 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-	<title>7</title>
-<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
-<script type="text/javascript" src="js/jquery.js"></script>
-<script src="js/masonry.pkgd.min.js"></script>
-<script src="js/imagesloaded.pkgd.min.js"></script>
-<script type="text/javascript" src="js/app.js"></script>
-</head>
+<!DOCTYPE html>
+<html> 
+<head> 
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" /> 
+  <title>Too Young</title>
+  <meta name="description" content="">
+  <meta name="keywords" content="too young, skivbolag, record label, artist, hjälten, hjalten, gwyneth, svrt, s-v-r-t, nånting fint, 25, på liv" />
+  <link rel="stylesheet" href="stylesheets/main.css" />
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src='js/app.js' type='text/javascript' charset='utf-8'></script>
+  <!-- <base target="_blank"> -->
+
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-56115604-1', 'auto');
+  ga('send', 'pageview');
+
+  </script>
+
+</head> 
 <body>
 
-<div id="pageWrap">
+	<div id="pageWrap">
 
-	<div id="header">
-		<div id="logoBox">
-			<div id="logo"></div>
-		</div>	
+      <div id="nav">
+
+        <div class="navLink" id="menuWrap">
+          <div id="menu">
+            <ul>
+              <li><a href="http://tooyoung.tictail.com" target="_blank">- Shop</a></li>
+              <li><a href="index.html">Too Young</a></li>
+              <li><a href="about.html">About -</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="navLink" id="blogWrap"><div id="blog"><a href="http://s-v-r-t.blogspot.se" target="_blank">Blog</a></div></div>
+        <div class="navLink" id="newsletterWrap"><div id="newsletter"><a href="newsletter.html">¡News!</a></div></div>
+        <div class="navLink" id="xxxWrap"><div id="xxx"><a href="#">YOUNGXXX</a></div></div>
+
+      </div>
+
+      <div id="mainWrap">
+        <div id="main">
+
+          <div id="viewWrap">
+            <div id="viewContainerWrap">
+              <div class="arrows" id="left">☜</div>
+              <div id="viewContainer">
+                
+
+                <!-- <div class="content" id="one"><h1>YOUNG001</h1></div>
+                <div class="content" id="two"><h1>YOUNG002</h1></div>
+                <div class="content" id="three"><h1>YOUNG003</h1></div> -->
+
+              
+              </div>
+              <div class="arrows" id="right">☞</div>
+            </div>
+          </div>
+
+
+
+        </div>
+      </div>
+		
+
+    <div class="follow" id="spotify">
+    <iframe src="https://embed.spotify.com/follow/1/?uri=spotify:artist:0VmYWZnnHW4BagFwC4sfO3&size=detail&theme=light&show-count=0" width="200" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
+    </div>
+
+    <div class="follow" id="soundcloud">
+    <iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/117997426&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+    </div>
+
 	</div>
-
-	<div id="sevenWrap">
-		<div id="sevenInner">
-			<div id="sevenBox">
-				<h1>7</h1>
-			</div>
-			<div id="wordBox">
-				<p>Interactions</p>
-			</div>
-		</div>
-	</div>
-
-	<div id="projectsWrap">
-		<div id="projectsInner">
-
-			<h1>Projects</h1>
-
-			<div id="container"></div>
-			<div class="cb"></div>
-			
-
-		</div>
-	</div>
-
-	<div id="quoteWrap">
-		<div id="quoteInner">
-		</div>
-	</div>
-
-	<div id="footerWrap">
-		<div id="footerInner">
-			<ul>
-				<li><a href="contact.html">contact</a></li>
-				<li><a href="about2.html">about</a></li>
-			</ul>
-		</div>
-	</div>
-
-</div>
 
 </body>
 </html>
