--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
       </div>
 		
 
-    <div class="follow" id="spotify">
+    <!-- <div class="follow" id="spotify">
     <iframe src="https://embed.spotify.com/follow/1/?uri=spotify:artist:0VmYWZnnHW4BagFwC4sfO3&size=detail&theme=light&show-count=0" width="200" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
     </div>
 
     <div class="follow" id="soundcloud">
-    <iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/117997426&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+    <iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/117997426&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe> -->
     </div>
 
 	</div>
